prod/front/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-front
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment-front-pod
  template:
    metadata:
      labels:
        app: deployment-front-pod
    spec:
      containers:
      - name: container-front
        image: potap2001/front:k8s
        resources:

        ports:
        - name: http
          containerPort: 80
