prod/front/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-front
  namespace: prod
spec:
  selector:
    app: deployment-front-pod
  ports:
  - port: 80
    targetPort: http
