prod/front/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-front
  namespace: prod
spec:
  rules:
  - host: berloga.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-front
            port: 
              number: 80
